--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.25.0"
+strum = "0.24.1"
+strum_macros = "0.24"
+num-traits = "0.2"
+num-derive = "0.3"
