--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,5 @@
-[package]
-name = "calculator"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-crossterm = "0.25.0"
-strum = "0.24.1"
-strum_macros = "0.24"
-num-traits = "0.2"
-num-derive = "0.3"
+[workspace]
+members = [
+  "calculator",
+  "discriminant_as_static_str_macro"
+]
