change macro name: striminant; string discriminant

--- a/calculator/Cargo.toml
+++ b/calculator/Cargo.toml
@@ -11,4 +11,4 @@ strum = "0.24.1"
 strum_macros = "0.24.3"
 num-traits = "0.2"
 num-derive = "0.3"
-discriminant_as_static_str_macro = { path = "../discriminant_as_static_str_macro" }
+striminant_macro = { path = "../striminant_macro" }
