--- a/calculator/Cargo.toml
+++ b/calculator/Cargo.toml
@@ -12,3 +12,4 @@ strum_macros = "0.24.3"
 num-traits = "0.2"
 num-derive = "0.3"
 striminant_macro = { path = "../striminant_macro" }
+itertools = "0.10.5"
